--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint .",
     "start": "ember serve",
-    "test": "ember test"
+    "test": "ember test --serve"
   },
   "devDependencies": {
     "@ember/optional-features": "^1.3.0",
